Fix search button on small devices

--- a/css/bartertown.css
+++ b/css/bartertown.css
@@ -9894,8 +9894,9 @@ header.ear-ads .ear-ad-right {
             box-shadow: inset 0 12px 12px rgba(255, 255, 255, .75);
   }
   .search-bar button {
-    width: 36px + 4;
-    height: 36px + 4;
+    width: 40px;
+    height: 40px;
+    border: 0;
     border-left: 1px solid #fff;
   }
   .search-bar button:focus,
