--- a/less/prop/ui/search.less
+++ b/less/prop/ui/search.less
@@ -16,7 +16,7 @@
       border: 0;
     }
     input {
-    padding: 0;
+      padding: 0;
       height: (@navbar-height + 4);
       background: rgba(255,255,255,.85);
       -moz-box-shadow:    inset 0 12px 12px rgba(255,255,255,.75);
@@ -24,8 +24,9 @@
       box-shadow:         inset 0 12px 12px rgba(255,255,255,.75);
     }
     button {
+      border: 0;
       border-left: 1px solid #fff;
-      .square(@navbar-height + 4);
+      .square(40px);
       &:focus,
       &:active {
         border: 0;
